2005-08-23  Kevin Kenny  <kennykb@users.sourceforge.net>

	[kennykb_numerics_branch]
	
	* generic/tclCmdMZ.c (Tcl_StringObjCmd):
	* generic/tclInt.h:
	* generic/tclObj.c (Tcl_GetBooleanFromObj, SetDoubleFromAny,
	Tcl_GetLongFromObj, Tcl_GetWideIntFromObj, Tcl_GetBignumFromObj):
	* generic/tclParseExpr.c (GetLexeme):
	* generic/tclScan.c (Tcl_ScanObjCmd):
	* generic/tclStrToD.c (TclParseNumber):
	* tests/binary.test (binary-62.1-65.7):
	* tests/expr.test (expr-40.1-42.1):
	* scan.test (scan-14.1,14.2):
	Modified Tcl_ParseNumber to accept an argument to force
	interpretation as decimal, and modified [scan] to use it.
	Corrected a bug where Not a Number with hexadecimal information
	bits returned consistently incorrect values. #ifdef-ed out
	some code that is needed only for IBM hexadecimal floating point.
	Fixed bugs in code to handle the corner cases of smallest and
	largest significands.  Added test cases to improve test coverage
	in generic/tclStrToD.c.	Added test cases for 0b notation (TIP
	#114).  Removed TclStrToD, and the static functions that it calls,
	which are now dead code (TclParseNumber	now does all input 
	floating-point conversions.)
	
2005-08-23  Don Porter  <dgp@users.sourceforge.net>

	[kennykb_numerics_branch]

	* generic/tclStrToD.c:	Bug fix: set shift magnitude properly whether
	we're expanding to mp_int type or not.

	* generic/tclExecute.c:	Bug fix: ACCEPT_NAN under INST_UMINUS.

	* generic/tclStrToD.c:	New macros TIP_114_FORMATS and KILL_OCTAL to
	configure acceptance of 0o and 0b numbers and rejection of "leading
	zero as octal".

	* generic/tclBasic.c:	Re-used the guts of int(.) and wide(.) math
	functions to perform conversions in OldMathFuncProc.

	* generic/tclBasic.c:	Support for ACCEPT_NAN.
	* generic/tclExecute.c:

	* generic/tclInt.decls:	Restored TclExprFloatError to internal stubs
	* generic/tclBasic.c:	table, and moved definition back to tclExecute.c
	* generic/tclExecute.c:	from tclBasic.c to handle #undef ACCEPT_NAN.
